--- a/Calculator/CalculatorTester/CalculatorTester.csproj
+++ b/Calculator/CalculatorTester/CalculatorTester.csproj
@@ -57,6 +57,9 @@
     <None Include="Data\TestData.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="Data\TestPower.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
