--- a/Calculator/CalculatorTester/CalculatorTester.csproj
+++ b/Calculator/CalculatorTester/CalculatorTester.csproj
@@ -50,7 +50,7 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="UnitTest_21_Anh.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
