--- a/SeleniumWF/VNExpress_Selenium/VNExpress_Selenium.csproj
+++ b/SeleniumWF/VNExpress_Selenium/VNExpress_Selenium.csproj
@@ -85,6 +85,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CellPhoneS.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CellPhoneS.Designer.cs">
+      <DependentUpon>CellPhoneS.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -105,6 +111,9 @@
     <Compile Include="RegisterFacebook.Designer.cs">
       <DependentUpon>RegisterFacebook.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="CellPhoneS.resx">
+      <DependentUpon>CellPhoneS.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
