--- a/Calculator/Calculator/Calculator.csproj
+++ b/Calculator/Calculator/Calculator.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Calculator.Designer.cs">
       <DependentUpon>Calculator.cs</DependentUpon>
     </Compile>
+    <Compile Include="PhepTinhDaThuc.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Calculator.resx">
